--- a/src/media/css/forms.styl
+++ b/src/media/css/forms.styl
@@ -121,6 +121,7 @@ form {
         input[type=email],
         input[type=text],
         input[type=search],
+        input[type=url],
         textarea {
             border-color: $red;
             color: $red;
@@ -134,6 +135,7 @@ form {
     input[type=email],
     input[type=text],
     input[type=search],
+    input[type=url],
     textarea,
     .pretty-select,
     .fake-field {
