Use 64x64 icons (resized to 32x32) in transonic (bug 1088369)

--- a/src/media/css/app_selector.styl
+++ b/src/media/css/app_selector.styl
@@ -122,9 +122,11 @@
         padding: 15px 5px 10px 10px;
     }
     .icon {
+        height: 32px;
         left: 10px;
         position: absolute;
         top: 15px;
+        width: 32px;
     }
     .info {
         padding-left: 42px;
