--- a/src/media/css/manage.styl
+++ b/src/media/css/manage.styl
@@ -92,9 +92,11 @@
         }
     }
     img {
+        height: 32px;
         left: 0;
         position: absolute;
         top: 8px;
+        width: 32px;
     }
     h3 {
         font-size: 13px;
