--- a/src/media/css/lib.styl
+++ b/src/media/css/lib.styl
@@ -114,7 +114,7 @@ $open-stack = FeuraSansWeb, "Open Sans", "Helvetica Neue", Arial, sans-serif;
 // Retina
 $retina = unquote('screen and (-webkit-min-device-pixel-ratio: 2), screen and (min--moz-device-pixel-ratio: 2), screen and (min-device-pixel-ratio: 2)');
 
-$regions = ar br cl cn co cz de es gr gr hu "in" it jp me mx pe ph pl rs uk us uy ve restofworld
+$regions = ar br cl cn co cz de es gr gr hu "in" it jp me mx pe ph pl rs ru uk us uy ve restofworld
 
 // Mixins
 $grain-src = url(../img/grain.png);
