--- a/src/media/css/feed.styl
+++ b/src/media/css/feed.styl
@@ -27,6 +27,8 @@ $grameenphone_regions = (bd)
 $grameenphone_color = #00ACE7;
 $tmobile_regions = (hu pl)
 $tmobile_color = #E20074;
+$kddi_regions = (jp)
+$kddi_color = #E35205;
 
 
 .feed .icon {
@@ -682,6 +684,13 @@ $tmobile_color = #E20074;
                 for region in $tmobile_regions {
                     [data-region={region}]& {
                         background-color: rgba($tmobile_color, 0.6);
+                    }
+                }
+            }
+            [data-carrier="kddi"]& {
+                for region in $kddi_regions {
+                    [data-region={region}]& {
+                        background-color: rgba($kddi_color, 0.6);
                     }
                 }
             }
