--- a/src/templates/fields/colors.html
+++ b/src/templates/fields/colors.html
@@ -1,8 +1,6 @@
 {% macro color_field(class, name, choices) %}
-  {% set color_selected = obj.background_color if obj else choices[0] %}
-  {% if indexOf(choices, obj.background_color) == -1 %}
-    {% set color_selected = choices[0] %}
-  {% endif %}
+  {# Choices is an array of (color name, color hex) tuples. #}
+  {% set color_selected = obj.color if obj else choices[0][0] %}
 
   <div class="{{ class }} field">
     <label class="inline-label">{{ name }}</label>
@@ -11,9 +9,10 @@
       <fieldset class="choices">
         {% for color in choices %}
           <input id="{{ class + loop.index0 }}" type="radio" name="{{ class }}"
-                 value="{{ color }}"{{ 'checked' if color_selected == color }}>
-          <label for="{{ class + loop.index0 }}" class="color{{ ' selected' if color_selected == color }}">
-            <div class="color-box" style="background: {{ color }}"></div>
+                 value="{{ color[0] }}"{{ 'checked' if color_selected == color[0] }}
+                 data-color="{{ color[1] }}">
+          <label for="{{ class + loop.index0 }}" class="color{{ ' selected' if color_selected == color[0] }}">
+            <div class="color-box" style="background: {{ color[1] }}"></div>
           </label>
         {% endfor %}
       </fieldset>
@@ -21,4 +20,4 @@
   </div>
 {% endmacro %}
 
-{{ color_field('bg-color', _('Background'), settings.bg_color_choices) }}
+{{ color_field('bg-color', _('Background'), COLLECTION_COLORS) }}
