enable bg color for listing coll (bug 1127538)

--- a/src/templates/create/collections.html
+++ b/src/templates/create/collections.html
@@ -23,8 +23,7 @@
 
     {% include "fields/collection_type.html" %}
 
-    <div class="collection-type promo
-                {{ 'hidden' if indexOf([C_PROMO], coll_type) == -1 }}">
+    <div class="collection-type promo listing">
       {% include "fields/colors.html" %}
     </div>
 
