update shelf colors (bug 1133767)

--- a/src/media/css/feed.styl
+++ b/src/media/css/feed.styl
@@ -14,18 +14,18 @@ $vertical-text-margin = 10px;  // Inner margin for text within a feed tile.
 $vertical-tile-margin = 10px;  // Vertical space between feed tiles.
 
 // Operator shelf colors and regions.
-$default_shelf_color = #ce001c;
+$default_shelf_color = #0098cf;
 $movistar_regions = (mx co ar uy pe es cl ve ec gt sv ni pa cr);
-$movistar_color = #7AB800;
+$movistar_color = #003245;
 $vivo_regions = (br);
 $vivo_color = #FF9900;
 $o2_regions = (de)
 $o2_color = #000066;
-$telenor_regions = (hu me rs)
+$telenor_regions = (hu me rs bd)
 $telenor_color = #00ACE7;
-$grameenphone_regions = (bd)
+$grameenphone_regions = (bd);
 $grameenphone_color = #00ACE7;
-$tmobile_regions = (hu pl)
+$tmobile_regions = (hu pl);
 $tmobile_color = #E20074;
 $kddi_regions = (jp)
 $kddi_color = #E35205;
